--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ footer {
   width: 10px;
   background-color: black;
   display: block;
-  margin: 20px auto;
+  margin: 20px 0;
 }
 
 .ball {
@@ -51,6 +51,12 @@ footer {
   align-content: center;
   justify-content: center;
   margin: 0 auto;
+}
+
+#ballContainer {
+  margin-bottom: 20px;
+  width: 600px;
+  margin:0 auto;
 }
 
 #leftButton {
