--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,30 @@ footer {
   position: relative;
 }
 
+.red {
+  background-color: red;
+  height: 50px;
+  width: 20px;
+}
+
+.yellow {
+  background-color: yellow;
+  height: 50px;
+  width: 20px;
+}
+
+.green {
+  background-color: lightgreen;
+  height: 50px;
+  width: 20px;
+}
+
+.orange {
+  background-color: orange;
+  height: 50px;
+  width: 20px;
+}
+
 #grid {
   height: 600px;
   width: 600px;
@@ -75,4 +99,13 @@ footer {
   display: flex;
   background-image: url('http://catskillny.org/wp-content/uploads/2017/05/redarrow-right.png');
   background-color: #cccccc;
+}
+
+#strengthMeter {
+  border: 1px solid yellow;
+  width: 200px;
+  height: 50px;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
 }
