erased grid-added source-working on strength meter

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ h1 {
   font-family: sans-serif;
   font-size: 60px;
   text-align: center;
+  margin-top: 20px;
 }
 
 footer {
@@ -15,8 +16,13 @@ footer {
 
 }
 
+a {
+  text-decoration: none;
+  color: orange;
+}
+
 .gridSquare {
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   height: 55px;
   width: 55px;
   overflow: hidden;
@@ -88,7 +94,7 @@ footer {
 
 #leftButton {
   margin-top: 20px;
-  border: 1px solid gold;
+  /* border: 1px solid gold; */
   width: 100px;
   height: 100px;
   display: flex;
@@ -98,7 +104,7 @@ footer {
 
 #rightButton {
   margin-top: 20px;
-  border: 1px solid gold;
+  /* border: 1px solid gold; */
   width: 100px;
   height: 100px;
   display: flex;
@@ -113,4 +119,9 @@ footer {
   margin-top: 25px;
   display: flex;
   flex-direction: row;
+}
+
+#rights {
+  text-align: center;
+  margin-top: 30px;
 }
