--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,12 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  width: 600px;
+  height: 600px;
 }
 
 .gridSquare {
-  /* border: 1px solid grey; */
+  border: 1px solid grey;
   height: 55px;
   width: 55px;
   overflow: hidden;
@@ -56,7 +58,7 @@ a {
   background-color: white;
   height: 10px;
   width: 10px;
-  margin: 0 auto;
+  margin-left: 300px;
   display: flex;
   position: relative;
   z-index: 4;
