--- a/css/style.css
+++ b/css/style.css
@@ -222,3 +222,12 @@ a {
   font-size: 50px;
   line-height: 60px;
 }
+
+#resetButton {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  font-family: 'Gloria Hallelujah', cursive;
+  background-color: darkgreen;
+  color: white;
+}
