--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a {
 }
 
 .gridSquare {
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   height: 55px;
   width: 55px;
   overflow: hidden;
