--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ h1 {
   font-family: 'Gloria Hallelujah', cursive;
   font-size: 60px;
   text-align: center;
-  margin-top: 20px;
+  margin: 0;
 }
 
 button {
